Fix logo displaying on small screens

--- a/src/styles/_header.styl
+++ b/src/styles/_header.styl
@@ -33,7 +33,7 @@
 +bp-max(lg)
 	.is-homepage
 		.siteLogo
-			fill $clr-primary
+			fill $clr-primary !important
 
 
 // Small screens navigation / header
